--- a/index.html
+++ b/index.html
@@ -3,129 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advanced Hospital Management System</title>
+    <title>HealthHub - Advanced Hospital Management System</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   </head>
-  <body>
+  <body id="home">
     <header>
       <nav>
-        <div class="logo">HMS</div>
+        <div class="logo">
+          <i class="fas fa-hospital-user"></i>
+          <span>HealthHub</span>
+        </div>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#appointments">Appointments</a></li>
-          <li><a href="#patients">Patients</a></li>
-          <li><a href="#doctors">Doctors</a></li>
-          <li><a href="#admin">Admin</a></li>
+          <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a></li>
+          <li><a href="patients.html"><i class="fas fa-user-injured"></i> Patients</a></li>
+          <li><a href="doctors.html"><i class="fas fa-user-md"></i> Doctors</a></li>
+          <li><a href="admin.html"><i class="fas fa-user-cog"></i> Admin</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <section id="home">
-        <h1>Welcome to Our Advanced Hospital Management System</h1>
-        <p>Efficient healthcare management at your fingertips</p>
-      </section>
-
-      <section id="appointments">
-        <h2>Book an Appointment</h2>
-        <form id="appointment-form">
-          <input
-            type="text"
-            id="patient-name"
-            placeholder="Patient Name"
-            required
-          />
-          <input type="date" id="appointment-date" required />
-          <select id="doctor-select" required>
-            <option value="">Select Doctor</option>
-          </select>
-          <textarea
-            id="appointment-notes"
-            placeholder="Any additional notes"
-          ></textarea>
-          <button type="submit">Book Appointment</button>
-        </form>
-        <div id="appointment-list">
-          <h3>Upcoming Appointments</h3>
-          <ul id="upcoming-appointments"></ul>
+      <section id="hero">
+        <div class="hero-content">
+          <h1>Welcome to HealthHub</h1>
+          <p>Advanced Hospital Management at Your Fingertips</p>
+          <a href="#features" class="btn">Learn More</a>
         </div>
       </section>
 
-      <section id="patients">
-        <h2>Patient Management</h2>
-        <form id="patient-form">
-          <input
-            type="text"
-            id="new-patient-name"
-            placeholder="Patient Name"
-            required
-          />
-          <input
-            type="number"
-            id="new-patient-age"
-            placeholder="Age"
-            required
-          />
-          <select id="new-patient-gender" required>
-            <option value="">Select Gender</option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-            <option value="Other">Other</option>
-          </select>
-          <input
-            type="tel"
-            id="new-patient-contact"
-            placeholder="Contact Number"
-            required
-          />
-          <button type="submit">Add Patient</button>
-        </form>
-        <table id="patient-table">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Gender</th>
-              <th>Contact</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </section>
-
-      <section id="doctors">
-        <h2>Our Doctors</h2>
-        <div id="doctor-list"></div>
-      </section>
-
-      <section id="admin">
-        <h2>Admin Panel</h2>
-        <form id="admin-login">
-          <input
-            type="text"
-            id="admin-username"
-            placeholder="Username"
-            required
-          />
-          <input
-            type="password"
-            id="admin-password"
-            placeholder="Password"
-            required
-          />
-          <button type="submit">Login</button>
-        </form>
-        <div id="admin-dashboard" style="display: none">
-          <h3>Welcome, Admin</h3>
-          <button id="generate-report">Generate PDF Report</button>
+      <section id="features">
+        <h2>Our Features</h2>
+        <div class="feature-grid">
+          <div class="feature-card">
+            <i class="fas fa-calendar-alt"></i>
+            <h3>Easy Appointments</h3>
+            <p>Book and manage appointments with ease.</p>
+          </div>
+          <div class="feature-card">
+            <i class="fas fa-user-injured"></i>
+            <h3>Patient Management</h3>
+            <p>Efficiently manage patient records and history.</p>
+          </div>
+          <div class="feature-card">
+            <i class="fas fa-user-md"></i>
+            <h3>Doctor Directory</h3>
+            <p>Access our comprehensive list of healthcare professionals.</p>
+          </div>
+          <div class="feature-card">
+            <i class="fas fa-chart-line"></i>
+            <h3>Admin Dashboard</h3>
+            <p>Powerful tools for hospital administration.</p>
+          </div>
         </div>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2024 Advanced Hospital Management System</p>
+      <p>&copy; 2024 HealthHub - Advanced Hospital Management System</p>
     </footer>
 
     <script src="script.js"></script>
