--- a/index.html
+++ b/index.html
@@ -1,69 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HealthHub - Advanced Hospital Management System</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <title>Vite + React</title>
   </head>
-  <body id="home">
-    <header>
-      <nav>
-        <div class="logo">
-          <i class="fas fa-hospital-user"></i>
-          <span>HealthHub</span>
-        </div>
-        <ul>
-          <li><a href="index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="appointments.html"><i class="fas fa-calendar-check"></i> Appointments</a></li>
-          <li><a href="patients.html"><i class="fas fa-user-injured"></i> Patients</a></li>
-          <li><a href="doctors.html"><i class="fas fa-user-md"></i> Doctors</a></li>
-          <li><a href="admin.html"><i class="fas fa-user-cog"></i> Admin</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-      <section id="hero">
-        <div class="hero-content">
-          <h1>Welcome to HealthHub</h1>
-          <p>Advanced Hospital Management at Your Fingertips</p>
-          <a href="#features" class="btn">Learn More</a>
-        </div>
-      </section>
-
-      <section id="features">
-        <h2>Our Features</h2>
-        <div class="feature-grid">
-          <div class="feature-card">
-            <i class="fas fa-calendar-alt"></i>
-            <h3>Easy Appointments</h3>
-            <p>Book and manage appointments with ease.</p>
-          </div>
-          <div class="feature-card">
-            <i class="fas fa-user-injured"></i>
-            <h3>Patient Management</h3>
-            <p>Efficiently manage patient records and history.</p>
-          </div>
-          <div class="feature-card">
-            <i class="fas fa-user-md"></i>
-            <h3>Doctor Directory</h3>
-            <p>Access our comprehensive list of healthcare professionals.</p>
-          </div>
-          <div class="feature-card">
-            <i class="fas fa-chart-line"></i>
-            <h3>Admin Dashboard</h3>
-            <p>Powerful tools for hospital administration.</p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 HealthHub - Advanced Hospital Management System</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
